--- a/index.html
+++ b/index.html
@@ -1,14 +1,49 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>EIM资源整理</title>
+<!DOCTYPE html> 
+<html> 
+<head> 
+<meta charset="utf-8"> 
+<title>Unit 1 EiM TV It’s All About Me Part 1</title> 
 </head>
- 
-<body>
-  <video width="320" height="240" controls></video>
+<body> 
+
+<div style="text-align:center"> 
+  <video id="video1" width="1080">
     <source src="https://cm15-c110-2.play.bokecc.com/flvs/ca/QxIzk/uC2wXqU26B-20.mp4?t=1623910999&key=9E4E38973A45CF1BFB6E3F2754C958A1&tpl=10&tpt=112" type="video/mp4">
-    </video>
-</body>
- 
+    您的浏览器不支持 HTML5 video 标签。
+  </video>
+  <br> 
+  <button onclick="playPause()">播放/暂停</button> 
+  <button onclick="makeBig()">放大</button>
+  <button onclick="makeSmall()">缩小</button>
+  <button onclick="makeNormal()">普通</button>
+</div> 
+
+<script> 
+var myVideo=document.getElementById("video1"); 
+
+function playPause()
+{ 
+	if (myVideo.paused) 
+	  myVideo.play(); 
+	else 
+	  myVideo.pause(); 
+} 
+
+	function makeBig()
+{ 
+	myVideo.width=560; 
+} 
+
+	function makeSmall()
+{ 
+	myVideo.width=320; 
+} 
+
+	function makeNormal()
+{ 
+	myVideo.width=420; 
+} 
+</script> 
+
+</body> 
 </html>
